# claunker

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.yaml  jobcard.py  pyproject.toml  smoke_judge_attribution.py  smoke_v050.py
docs/: claunker-amendment-2026-07-06-v050.md  claunker-amendment-governance.md  claunker-dispatch-lane-ledger.md  claunker-foundation-00-reconciliation.md  claunker-foundation-04-hermes-composition.md  claunker-foundation-05-security-loop.md  claunker-foundations-index-v3.md  claunker-ft008-grant-inventory.md  claunker-roadmap.md  claunker-spine-reconciliation-2026-06-28.md  claunker-spine-schema-ratified.md  claunker-spine-storage-ratified.md  kanbantt-mcp-spec.md
hermes_cli/: __init__.py  claunker_classifier.py
plugins/judge-verdict/: __init__.py  plugin.yaml  schemas.py  test_ft009_judge_unavailable.py  tools.py
plugins/judge-verdict/references/: judge-config.md
scripts/: deploy_classifier.py  validate-hermes-config.py  verify_mcp.py
scripts/watchdog/: launcher.vbs  task-backup-2026-07-03.xml  watchdog-loop.ps1
skills/orchestration/claunker-orchestration/: SKILL.md
spine/: __init__.py  drive_backup.py  entity.py  events.py  ordering.py  projection.py  reducer.py  spine.py  storage.py  version.py
spine_server/: __init__.py  board.py  cards.py  config.py  http.py  result.py  server.py
tests/: test_drive_backup.py  test_ft005_judge_provenance.py  test_jobcard.py  test_validate_hermes_config.py
tests/hermes_cli/: test_claunker_classifier.py
tests/spine/: test_spine_data_core.py
tests/spine_server/: _util.py  test_board_get.py  test_card_archive.py  test_card_description.py  test_card_list.py  test_card_provenance.py  test_card_retier.py  test_card_update_v050.py  test_card_write.py  test_escalation_resolve.py  test_mcp_surface.py  test_project_list.py  test_spec_divergences.py  test_transport.py
