[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claunker-spine"
version = "0.5.0"
description = "Claunker Spine: a governed MCP board server (Streamable HTTP) backing Kanbantt, with 10 tools, tiered authorization, append-only tier/archive/edit-audit ledgers, due + depends_on, RFC 7386 patch semantics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "starlette",
    "anyio",
    "httpx",
    "uvicorn",
    "pyyaml",
    "google-api-python-client",
    "google-auth",
]

# One-command launch: `python -m spine_server.server`, or the console script below.
# main() in spine_server.server is no-arg and reads CLAUNKER_SPINE_* from the env.
[project.scripts]
claunker-spine = "spine_server.server:main"

# Dev/test tooling (PEP 735). `uv sync` installs it into .venv; `uv run pytest`
# then works with no --with injection.
[dependency-groups]
dev = ["pytest"]

# Bare `pytest` from the repo root collects only tests/ (keeps it off the
# plugins/judge-verdict tree, which is not a pytest suite).
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["spine", "spine_server"]
